vendor/github.com/richardlehane/webarchive/examples/jhove/invalid/invalid-warcheaderversion-25.warc
WARC/1.0
: resource
